--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,42 @@
 @import "./utils/mixins";
 @import "./utils/placeholders";
 @import "./utils/variables";
+
+$grey-color : #353535;
+$black-color: #000000;
+$white-color: #FFFFFF;
+$light-green-btn: #99E2D0;
+$dark-green-btn: #008766;
+$primary-btn-color: #9356DC;
+$secondary-btn-color: #FF79DA;
+
+$roboto: 'Roboto', sans-serif;
+$shrikhand: 'Shrikhand', cursive;
+
+* {
+    box-shadow: 0 0 0 1px red;
+}
+
+/********** Generale **********/
+body  {
+    margin: 0;
+    padding: 0;
+    min-width: 375px;
+}
+
+h1, h2 {
+    font-family: $shrikhand;
+}
+
+/********** Header **********/
+.header {
+    height: 113px;
+    .header__logo {
+        text-align: center;
+    }
+    i { 
+        background-color: #EAEAEA;
+        width: 100%;
+        text-align: center;
+    }
+}
