--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap");
 h1, h2 {
   font-family: "Shrikhand", cursive;
+}
+
+a {
+  text-decoration: none;
+  color: var(--black-color);
+}
+
+* {
+  box-shadow: 0 0 0 1px red;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  min-width: 375px;
 }
 
 .header {
@@ -12,14 +28,4 @@ h1, h2 {
   background-color: #EAEAEA;
   width: 100%;
   text-align: center;
-}
-
-* {
-  box-shadow: 0 0 0 1px red;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  min-width: 375px;
 }
