--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,11 +1,16 @@
 .header {
-    height: 113px;
-    .header__logo {
-        text-align: center;
+    &__logo {
+        height: 63px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
-    i { 
+    &__location { 
+        box-shadow: 0px 2px 4px rgba(0,0,0,0.15) inset; 
         background-color: #EAEAEA;
-        width: 100%;
-        text-align: center;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
