--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,12 @@
 @import "base/typography";
 @import "components/buttons";
+@import "components/cards";
 @import "layout/body";
+@import "layout/fonctionnement";
 @import "layout/footer";
-@import "layout/forms";
-@import "layout/grid";
 @import "layout/header";
+@import "layout/reservez";
+@import "layout/restaurants";
 @import "utils/functions";
 @import "utils/mixins";
 @import "utils/placeholders";
