--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,3 +5,4 @@ $light-green-btn: #99E2D0;
 $dark-green-btn: #008766;
 $primary-btn-color: #9356DC;
 $secondary-btn-color: #FF79DA;
+$background-color: #D2D2D2
