--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,16 +3,17 @@
 $roboto: 'Roboto', sans-serif;
 $shrikhand: 'Shrikhand', cursive;
 
-h1, h2 {
+h1 {
     font-family: $shrikhand;
+    font-size: 1.875em;
     margin: 0;
 }
 
-h1 {
-    font-size: 1.875em;
+h2, h3, p, span, button {
+    font-family: $roboto;
+    margin: 0;
 }
 
 p {
-    font-family: $roboto;
-    margin: 0;
+    font-weight: 300;
 }
