--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,3 +1,5 @@
+@import "../utils/variables";
+
 .header {
     &__logo {
         height: 63px;
@@ -7,7 +9,7 @@
     }
     &__location { 
         box-shadow: 0px 2px 4px rgba(0,0,0,0.15) inset; 
-        background-color: #EAEAEA;
+        background-color: red;
         height: 50px;
         display: flex;
         justify-content: center;
