ajoute les couleurs de fond

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,14 @@
-@import "base/typography";
-@import "components/buttons";
-@import "components/cards";
-@import "layout/body";
-@import "layout/fonctionnement";
-@import "layout/footer";
-@import "layout/header";
-@import "layout/reservez";
-@import "layout/restaurants";
-@import "utils/functions";
-@import "utils/mixins";
-@import "utils/placeholders";
-@import "utils/variables";
+@import "./base/typography";
+@import "./base/colors";
+@import "./components/buttons";
+@import "./components/cards";
+@import "./layout/body";
+@import "./layout/fonctionnement";
+@import "./layout/footer";
+@import "./layout/header";
+@import "./layout/reservez";
+@import "./layout/restaurants";
+@import "./utils/functions";
+@import "./utils/mixins";
+@import "./utils/placeholders";
+@import "./utils/variables";
