--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,8 +1,11 @@
-$grey-color : #353535;
 $black-color: #000000;
 $white-color: #FFFFFF;
-$light-green-btn: #99E2D0;
-$dark-green-btn: #008766;
-$primary-btn-color: #9356DC;
-$secondary-btn-color: #FF79DA;
-$background-color: #D2D2D2
+
+$background-color: #F6F6F6;
+$location-light-grey: #EAEAEA;
+$footer-grey-color : #353535;
+
+$btn-light-green: #99E2D0;
+$btn-dark-green: #008766;
+$btn-dark-purple: #9356DC;
+$btn-light-purple: #FF79DA;
