--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,18 @@ p {
   font-weight: 300;
 }
 
+body {
+  background-color: #F6F6F6;
+}
+
+.header__logo, .fonctionnement {
+  background-color: #FFFFFF;
+}
+
+.header__location {
+  background-color: #EAEAEA;
+}
+
 a {
   text-decoration: none;
 }
@@ -23,7 +35,6 @@ a {
 }
 
 body {
-  background-color: #D2D2D2;
   margin: 0;
   padding: 0;
   min-width: 375px;
@@ -37,7 +48,6 @@ body {
 }
 .header__location {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15) inset;
-  background-color: red;
   height: 50px;
   display: flex;
   justify-content: center;
@@ -45,5 +55,5 @@ body {
 }
 
 .reservation {
-  color: #D2D2D2;
+  color: green;
 }
