--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,3 +9,4 @@ $btn-light-green: #99E2D0;
 $btn-dark-green: #008766;
 $btn-dark-purple: #9356DC;
 $btn-light-purple: #FF79DA;
+$btn-icone-grey: #7E7E7E;
