--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -142,9 +142,17 @@ button {
 }
 
 body {
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
   padding: 0;
   min-width: 375px;
+}
+
+.main-wrapper {
+  width: 100%;
 }
 
 img {
@@ -153,17 +161,26 @@ img {
 }
 
 .fonctionnement {
+  display: flex;
+  flex-direction: column;
   height: 440px;
 }
 .fonctionnement__title {
   padding: 48px 80px 26px 20px;
 }
 
+footer {
+  width: 100%;
+}
+
+.header {
+  width: 100%;
+}
 .header__logo {
-  height: 63px;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 63px;
 }
 .header__location {
   height: 50px;
@@ -173,6 +190,9 @@ img {
 }
 
 .reservation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 .reservation__title {
