--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,10 @@
 .header {
+    width: 100%;
     &__logo {
-        height: 63px;
         display: flex;
         justify-content: center;
         align-items: center;
+        height: 63px;
     }
     &__location { 
         height: 50px;
