--- a/sass/layout/_reservez.scss
+++ b/sass/layout/_reservez.scss
@@ -1,4 +1,7 @@
 .reservation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     &__title {
         margin: 39.5px 58px 0 42px;
