--- a/sass/layout/_fonctionnement.scss
+++ b/sass/layout/_fonctionnement.scss
@@ -1,8 +1,12 @@
 .fonctionnement {
-    display: flex;
-    flex-direction: column;
     height: 440px;
     &__title {
         padding: 48px 80px 26px 20px;
     }
+    &__main__wrapper {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    
 }
