--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -1,6 +1,6 @@
-* {
+/* * {
     box-shadow: 0 0 0 1px red inset;
-}
+} */
 
 body  {
     display: flex;
@@ -10,13 +10,13 @@ body  {
     margin: auto;
     padding: 0;
     min-width: 375px;
-    max-width: 1440px;
+    max-width: 768px;
+    
 }
 
 .main-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
-}
-img {
-    height: 100px;
-    width: 100px;
 }
