--- a/sass/layout/_fonctionnement.scss
+++ b/sass/layout/_fonctionnement.scss
@@ -1,12 +1,21 @@
 .fonctionnement {
-    height: 440px;
-    &__title {
-        padding: 48px 80px 26px 20px;
-    }
-    &__main__wrapper {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-    }
-    
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   width: 100%;
+   &__wrap {
+       display: flex;
+       flex-direction: column;
+       width: 375px;
+       height: 440px;
+       &--title {
+        margin: 48px 80px 26px 20px;
+       }
+   }
+}
+.btn__box {
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ gap: 25px;
 }
