--- a/sass/layout/_reservez.scss
+++ b/sass/layout/_reservez.scss
@@ -3,15 +3,12 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    width: 100%;
     &__title {
         margin: 39.5px 58px 0 42px;
-        width: 275px;
-        height: 68px;
     }
     &__subtitle {
-        margin: 0 26px 27px 34px;
-        width: 315px;
-        height: 46px;
+        margin: 18px 26px 27px 34px;
     }
     &__btn {
         margin: 0 75px 57px 82px;
