--- a/sass/layout/_restaurants.scss
+++ b/sass/layout/_restaurants.scss
@@ -1,1 +1,15 @@
-@import "../utils/variables";
+.restaurants {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    &__title {
+        width: 100%;
+    }
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        width: 340px;
+        gap: 18px;
+    }
+}
