termine les cards

--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -22,7 +22,7 @@ button {
     color: $white-color;
 }
 
-.btn {
+.fonctionnement__btn {
     background-color: $background-color;
     box-shadow: 0px 4px 15px 0px rgba(0,0,0,0.15);
     &__numberBox {
