--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,29 +26,23 @@ a {
   font-size: 18px;
 }
 
-.btn__numberBox--number {
+.fonctionnement__btn__numberBox--number {
   font-weight: 500;
   font-size: 0.886em;
 }
-.btn__text {
+.fonctionnement__btn__text {
   font-weight: 500;
 }
 
-.card {
-  /* 
-  &__title {
-
-  }
-  &__subtitle {
-
-  }
-  &__icon {
-
-  } */
-}
 .card__nouveau {
   font-size: 14px;
   font-weight: 500;
+}
+.card__title {
+  font-size: 1.125em;
+}
+.card__subtitle {
+  font-size: 1.063em;
 }
 
 body {
@@ -73,20 +67,20 @@ button {
   color: #FFFFFF;
 }
 
-.btn {
+.fonctionnement__btn {
   background-color: #F6F6F6;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
 }
-.btn__numberBox {
+.fonctionnement__btn__numberBox {
   background-color: #9356DC;
 }
-.btn__numberBox--number {
+.fonctionnement__btn__numberBox--number {
   color: #F6F6F6;
 }
-.btn__logo {
+.fonctionnement__btn__logo {
   color: #7E7E7E;
 }
-.btn .fa-store {
+.fonctionnement__btn .fa-store {
   color: #9356DC;
 }
 
@@ -115,7 +109,7 @@ button {
   height: 50px;
 }
 
-.btn {
+.fonctionnement__btn {
   display: flex;
   align-items: center;
   position: relative;
@@ -123,62 +117,70 @@ button {
   height: 72.38px;
   border-radius: 20px;
 }
-.btn__numberBox {
+.fonctionnement__btn__numberBox {
   position: absolute;
   left: -12px;
   height: 24px;
   width: 24px;
   border-radius: 12px;
 }
-.btn__numberBox--number {
+.fonctionnement__btn__numberBox--number {
   position: absolute;
   top: 5.09px;
   left: 8px;
 }
-.btn__logo {
+.fonctionnement__btn__logo {
   position: absolute;
   left: 33.5px;
 }
-.btn__text {
+.fonctionnement__btn__text {
   margin-left: 74px;
 }
 
 .card {
   position: relative;
-  /* background-color: aquamarine;
-   height: 251px;
-   width: 340px;
-   border-radius: 15px;*/
-  /* 
-  &__title {
-
-  }
-  &__subtitle {
-
-  }
-  &__icon {
-
-  } */
+  width: 340px;
+  border-radius: 15px;
+  overflow: hidden;
 }
 .card__img {
-  object-fit: none;
-  height: 231px;
+  object-fit: cover;
   width: 346px;
+  height: 231px;
+  margin: -57px -3px 0 -3px;
 }
 .card__nouveau {
   display: flex;
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 100px;
   width: 80px;
   height: 29px;
+  top: 13px;
+  left: 251px;
   border-radius: 2px;
 }
+.card__title {
+  margin: 16px 60px 5px 13px;
+}
+.card__subtitle {
+  margin: 0 80px 12px 13px;
+}
+.card__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 22px;
+  height: 21px;
+  bottom: 33px;
+  right: 25px;
+}
 
-/* * {
-    box-shadow: 0 0 0 1px red inset;
-} */
+* {
+  box-shadow: 0 0 0 1px red inset;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -261,14 +263,17 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+}
+.restaurants__wrap {
+  width: 375px;
 }
 .restaurants__title {
-  width: 100%;
+  margin: 54px 80px 28px 20px;
 }
 .restaurants__wrapper {
   display: flex;
   flex-direction: column;
-  width: 340px;
+  align-items: center;
   gap: 18px;
+  margin-bottom: 66px;
 }
