--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -1,31 +1,40 @@
 .card {
-     position: relative;
-   /* background-color: aquamarine;
-    height: 251px;
+    position: relative;
     width: 340px;
-    border-radius: 15px;*/
+    border-radius: 15px;
+    overflow: hidden;
     &__img {
-        object-fit: none;
-        height: 231px;
+        object-fit: cover;
         width: 346px; 
+        height: 231px;
+        margin: -57px -3px 0 -3px;
     } 
     &__nouveau {
         display: flex;
         justify-content: center;
         align-items: center;
         position: absolute;
-        top: 100px;
         width: 80px;
         height: 29px;
+        top: 13px;
+        left: 251px;
         border-radius: 2px;
-    }/* 
+    } 
     &__title {
+        margin: 16px 60px 5px 13px;
 
     }
     &__subtitle {
-
+        margin: 0 80px 12px 13px;
     }
     &__icon {
-
-    } */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        width: 22px;
+        height: 21px;
+        bottom: 33px;
+        right: 25px;
+    }
 }
