--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,3 +1,21 @@
-footer {
+ footer {
+    display: flex;
+    flex-direction: column;
     width: 100%;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    padding: 22px 25px;
+    gap: 16px;
+    &__list {
+        display: flex;
+        flex-direction: column;
+        gap: 7px;
+        &--item {
+            display: flex;
+            align-items: center; 
+        }
+    }
 }
