--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -23,7 +23,7 @@ header, .fonctionnement {
 }
 
 button {
-    background: linear-gradient(193.33deg, var(--btn-light-purple) -11.44%, var(--btn-light-purple) 123.93%);
+    background: linear-gradient(193.33deg, var(--btn-light-purple) -11.44%, var(--btn-dark-purple) 123.93%);
     color: var(--white-color);
 }
 
