--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -9,6 +9,10 @@ a, a:visited, a:active  {
     color: var(--black-color);
 }
 
+li a {
+    color: var(--white-color);
+}
+
 h1, h4 {
     font-family: u.$font-shirkhand;
     font-weight: 400;
