--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -28,6 +28,10 @@ h1 {
     font-weight: 300;
 }
 
+.reservation a {
+    color: var(--white-color);
+}
+
 .btn {
     font-family: u.$font-roboto;
     font-size: 1em;
