--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -19,17 +19,18 @@ header, .fonctionnement {
 
 .header__location {
     background-color: var(--location-light-grey);
-    box-shadow: 0px 2px 4px rgba(0,0,0,0.15) inset; 
+    box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.15) inset; 
 }
 
-button {
+.reservation__btn {
     background: linear-gradient(193.33deg, var(--btn-light-purple) -11.44%, var(--btn-dark-purple) 123.93%);
     color: var(--white-color);
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
 .fonctionnement__btn {
     background-color: var(--background-color);
-    box-shadow: 0px 4px 15px 0px rgba(0,0,0,0.15);
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
     &__numberBox {
         background-color: var(--btn-dark-purple);
         &--number {
