--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,5 +1,7 @@
 .reservation__btn {
-    border: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     border-radius: 25px;
     width: 218px;
     height: 50px;
